Fixed sidebar visibility

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100px;
+    height: 100vh;
     width: 80px;
     background-color: #12171e;
     padding: 0.4rem 0.8rem;
@@ -139,7 +139,6 @@
     padding: 0.4rem 1.2rem;
     line-height: 1.8rem;
     z-index: 20;
-    opacity: 0;
     display: none;
 }
 
